--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,18 @@
                  <artifactId>ooxml-schemas</artifactId>
                  <version>1.1</version>
           </dependency>
+          
+       <dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>3.0.6</version>
+</dependency>
+
+ <dependency>
+<groupId>com.relevantcodes</groupId>
+<artifactId>extentreports</artifactId>
+<version>2.41.2</version>
+</dependency>
 
           <!-- <dependency>
                  <groupId>org.apache.poi</groupId>
